--- a/my-app/Components/Form.jsx/Form.module.css
+++ b/my-app/Components/Form.jsx/Form.module.css
@@ -17,12 +17,34 @@
 .entry{
     width: 100%;
     list-style: none;
-    padding: 3px;
-    display:flex ;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
 background-color: tomato;
-    flex-direction: row; 
 }
-
+.entry > li{
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+   
+   margin: 10px;
+   /* border: 1px black solid;
+    background-color: aliceblue;
+    overflow-x: ; */
+}
+.entry >li >  label{
+    width: max-content;
+ 
+    margin: 3px;
+  
+}
+.entry >li >  input{
+   width: 100%;
+   padding: 5px;
+   border-radius: 10px;
+   border-color: antiquewhite;
+   margin: 3px;
+}
 .itemForm{
     background-color: blueviolet;
     padding: 5px;
@@ -44,7 +66,21 @@ background-color: tomato;
     background-color: aliceblue;
 }
 
+.ItemEntry >li>label {
+    width: max-content;
+ 
+    margin: 3px;
+  
+}
+.ItemEntry >li >input{
+    width: 100%;
+    padding: 5px;
+    border-radius: 10px;
+    border-color: antiquewhite;
+    margin: 3px;
+ }
+
 .btn{
-   justify-self: end;
-   margin-top: 10%;
+   /* justify-self: end; */
+   margin-top: 15%;
 }
